--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -49,35 +49,35 @@
         display: none;
     }
 
-    /* Adjust sizes for mobile - smaller to fit 6 elements */
+    /* Adjust sizes for mobile - balanced proportions */
     .folder {
-        width: 80px;
-        height: 100px;
+        width: 70px;
+        height: 88px;
     }
 
     .terminal {
-        width: 110px;
-        height: 95px;
-    }
-
-    .notebook {
-        width: 65px;
+        width: 95px;
         height: 80px;
     }
 
+    .notebook {
+        width: 55px;
+        height: 70px;
+    }
+
     .microscope {
-        width: 50px;
-        height: 65px;
+        width: 45px;
+        height: 60px;
     }
 
     .flask {
-        width: 40px;
-        height: 55px;
+        width: 35px;
+        height: 50px;
     }
 
     .envelope {
-        width: 55px;
-        height: 40px;
+        width: 50px;
+        height: 35px;
     }
 
     /* Hide hands on mobile */
